FIX: font align center h3 in cards of main.py

--- a/views/styless.css
+++ b/views/styless.css
@@ -129,6 +129,7 @@ div[data-testid="stMetricValue"] {
 
 .team-card h3 {
     font-size: 1.1em;
+    text-align: center;
     margin-bottom: 10px;
     color: #041033;
 }
